# ita-domes

./: .gitignore  LICENSE  README.md  __Z_setup.py  analysis.py  pyproject.toml  simulation.py
.spyproject/config/backups/: workspace.ini.bak
classes/: Appliances.py  Archetype.py  BuildingsPlants.py  DHW.py  HVAC_Systems.py  Results.py  thermalZone.py
docs/: quickstart.html
docs/notebooks/: quickstart.ipynb  results_analysis.ipynb
docs/notebooks/.ipynb_checkpoints/: quickstart-checkpoint.ipynb
funcs/: __old__auxiliary_functions.py  aux_functions.py  elaborazioni_risultati.py  io_functions.py  main_functions.py  main_functions_parallel.py
ita_domes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
itadomes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
resources/HVAC_data/: Impianti.xlsx
resources/appliances_data/: Database_elettrodomestici_2013.xlsx
resources/conversion_factors/: Fuels.xlsx
resources/envelope_data/: Buildings_Envelope.xlsx  Buildings_Envelope_Constructions.csv  Buildings_Envelope_Envelopes.csv  Buildings_Envelope_Materials.csv  Buildings_Envelope_Opaque_types.csv  Buildings_Envelope_Windows.csv  create_envelopes.py
resources/istat_data/: domande istat.xlsx  prova_clusters.py  residential_buildings_census.csv
resources/istat_data/ECH_2013_IT/: !Leggimi.html
resources/istat_data/ECH_2013_IT/METADATI/: ECH_Tracciato_Anno 2013.html
resources/istat_data/Microdati21/: !Leggimi.html  process_microdata_21.py
resources/istat_data/Microdati21/METADATI/: ISTAT_MFR_ECH_Allegato_3_CEF2021_TAVOLE_REPORT_21dicembre2022.xlsx  ISTAT_MFR_ECH_Allegato_4_CEF2021_TAVOLE_REPORT_21giugno2022.xlsx  ISTAT_MFR_ECH_Tracciato_2021_DELIMITED.html
resources/istat_data/UserClusters/istat_data/: 00_Clustering_Exploratory.py  01_PCA_Exploratory.py  02_Families_Analysis.py  03_PCA_Clustering.py  04_Classification_Analysis_FAILED.py  05_00_PFE_Exploratory.py  05_01_PFE_Variable_Analysis.py  05_02_PFE_Probablity.py  05_03_PFE_Analysis.py  06_Direct_Regression_FAILED.py  07_ANOVA_analysis.py  Clustered.csv  clusters.csv  domande istat.xlsx  elet.csv  family_trees.csv  new_elet.csv  plots.py  probabilities_only.csv  (+1 more)
resources/user_data/: create_standard_users.py  schedules_EN16798_Residential.xlsx  standard_users.pickle
resources/weather_data/: analyze_weather_data.py  replace_weather_data.py
resources/weather_data/CTI/: cti-data-processing.py
(+570 files in other folders)
