[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ita-domes"
version = "0.0.1"
authors = [
  { name="Jacopo Vivian", email="jacopo.vivian@hotmail.com" },
  { name="Enrico Prataviera", email="enrico.prataviera@unipd.it" },
]
dependencies = [
	"pandas",
	"numpy",
	"pvlib",
	"scipy",
	"matplotlib",
	"geopandas",
	"pathlib",
	"blosc",
	"progressbar2",
	"eureca-ubem @ git+https://github.com/BETALAB-team/EUReCA@grins_model"
]

description = "A simulation tool for the evaluation of the energy consumption of Italian residential buildings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BETALAB-team/ita-domes"
Issues = "https://github.com/BETALAB-team/ita-domes/issues"

[tool.setuptools]
py-modules = [
"funcs",
"classes",
"resources"
]